--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <a href="Session_1/index.html">Introduction Page</a>
     <br>
     <a href="Session_1/mystyle.html">MyStyle Page</a>
+    <br>
+    <h1>This the what I did in the second session<h1>
+    <a href="SO2/3.css.html">CSS Page</a>
 </body>
 </html>
