I did all my hw.

--- a/SO2/Hw2-Favorite movies.html
+++ b/SO2/Hw2-Favorite movies.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Favorite Movies</title>
 </head>
-<body>
+<body style="background-color: lavenderblush">
+
+    <h1>Favorite Movies</h1>
+    <br>
+    <p>I don't have a <u>favorite</u> movie, but I do like a lot of movies. Hence I <b>cannot</b> choose a favorite movie.</p>
     
 </body>
 </html>
