--- a/index.html
+++ b/index.html
@@ -6,13 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
 </head>
-<body>
-    <h1>These are the pages in my Website.</h1>
+<body style="background-color: lightcyan">
+    <h1>These are different websites that I have created in class.</h1>
     <a href="Session_1/index.html">Introduction Page</a>
     <br>
     <a href="Session_1/mystyle.html">MyStyle Page</a>
-    <br>
-    <h1>This the what I did in the second session<h1>
+    <br><br><br>
+    <h1>This the what I did in the second session</h1>
     <a href="SO2/3.css.html">CSS Page</a>
+    <a href="SO2/2.style.html">Style</a>
+    <br>
+    <h2> This is homework for the second session</h2>
+    <br>
+    <a href="SO2/Hw1-hobbies.html"> My Hobbies </a>
+    <a href="SO2/Hw2-Favorite movies.html">Favorite Movies</a>
 </body>
 </html>
