I modified the index  TEEHEE

--- a/index.html
+++ b/index.html
@@ -8,16 +8,17 @@
 </head>
 <body style="background-color: lightcyan">
     <h1>These are different websites that I have created in class.</h1>
+    <h2> Session 2 </h2>
     <a href="Session_1/index.html">Introduction Page</a>
     <br>
     <a href="Session_1/mystyle.html">MyStyle Page</a>
     <br><br><br>
-    <h1>This the what I did in the second session</h1>
+    <h2> Session 2</h2>
+    <h3> Classwork for Session 2 <h3>
     <a href="SO2/3.css.html">CSS Page</a>
     <a href="SO2/2.style.html">Style</a>
     <br>
-    <h2> This is homework for the second session</h2>
-    <br>
+    <h3> This is homework for the second session</h3>
     <a href="SO2/Hw1-hobbies.html"> My Hobbies </a>
     <a href="SO2/Hw2-Favorite movies.html">Favorite Movies</a>
 </body>
