--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
 </head>
-<body style="background-color: lightcyan">
+<body style="background-color: lightcoral">
     <h1>These are different websites that I have created in class.</h1>
-    <h2> Session 2 </h2>
+    <h2> Session 1 </h2>
+    <h3> Classwork </h3>
     <a href="Session_1/index.html">Introduction Page</a>
     <br>
     <a href="Session_1/mystyle.html">MyStyle Page</a>
@@ -20,6 +21,7 @@
     <br>
     <h3> This is homework for the second session</h3>
     <a href="SO2/Hw1-hobbies.html"> My Hobbies </a>
+    <br>
     <a href="SO2/Hw2-Favorite movies.html">Favorite Movies</a>
 </body>
 </html>
