--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>My Website</title>
 </head>
-<body style="background-color: lavenderblush">
+<body style="background-color: lavender">
     <h1>These are different websites that I have created in class.</h1>
     <h2> Session 1 </h2>
     <h3> Classwork </h3>
