I did something. I like making websites too much. I have a problem

--- a/SO2/Hw2-Favorite movies.html
+++ b/SO2/Hw2-Favorite movies.html
@@ -8,9 +8,20 @@
 </head>
 <body style="background-color: lavenderblush">
 
+    <style>
+        h1{
+            border: 2px dashed red;
+            background-color: wheat;
+            color: red;
+        }
+    </style>
+
     <h1>Favorite Movies</h1>
     <br>
-    <p>I don't have a <u>favorite</u> movie, but I do like a lot of movies. Hence I <b>cannot</b> choose a favorite movie.</p>
-    
+    <h1>I don't have a <u>favorite</u> movie, but I do like a lot of movies. Hence I <b>cannot</b> choose a favorite movie.</p>
+
+    <h1> <u dashed> Error 362: Favorite movie not found!!!</u></p>
+
+
 </body>
 </html>
