I made changes to Fav Movies

--- a/SO2/Hw2-Favorite movies.html
+++ b/SO2/Hw2-Favorite movies.html
@@ -9,7 +9,11 @@
 <body style="background-color: lavenderblush">
 
     <style>
-        h1{
+        h2{
+            border-left: 2px red;
+            background-color: rgb(245, 131, 133, 0.43);
+        }
+        h3{
             border: 2px dashed red;
             background-color: wheat;
             color: red;
@@ -18,9 +22,9 @@
 
     <h1>Favorite Movies</h1>
     <br>
-    <h1>I don't have a <u>favorite</u> movie, but I do like a lot of movies. Hence I <b>cannot</b> choose a favorite movie.</p>
+    <h2>I don't have a <u>favorite</u> movie, but I do like a lot of movies. Hence I <b>cannot</b> choose a favorite movie.</h2>
     <br>
-    <h1> <u dashed> Error 362: Favorite movie not found!!!</u></p>
+    <h3> <u> Error 362: Favorite movie not found!!!</u></h3>
 
 
 </body>
