I made one last change. THE LAST OF ToDAY I PROMISE!!!

--- a/SO2/Hw2-Favorite movies.html
+++ b/SO2/Hw2-Favorite movies.html
@@ -10,8 +10,9 @@
 
     <style>
         h2{
-            border-left: 2px red;
-            background-color: rgb(245, 131, 133, 0.43);
+            border-left: 6px solid lightcoral;
+            padding: 0.150; 
+            background-color:rgba(245, 131, 133, 0.38)
         }
         h3{
             border: 2px dashed red;
