--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Website</title>
+    <title>My Websites</title>
 </head>
 <body style="background-color: lavender">
-    <h1>These are different websites that I have created in class.</h1>
+    <h1>My Websites</h1>
     <h2> Session 1 </h2>
     <h3> Classwork </h3>
     <a href="Session_1/index.html">Introduction Page</a>
