This is classwork

--- a/index.html
+++ b/index.html
@@ -24,5 +24,15 @@
     <a href="SO2/Hw1-hobbies.html"> My Hobbies </a>
     <br>
     <a href="SO2/Hw2-Favorite movies.html">Favorite Movies</a>
+    <br><br><br>
+    <h2>Session 3</h2>
+    <br>
+    <h3>Session 3; Classwork</h3>
+    <a href="SO3/1.getstarted.html"> Get Started</a>
+    <br>
+    <a href="SO3/2.alert.html">Alert</a>
+    <br>
+    <h3>Session 3; Homework</h3>
+
 </body>
 </html>
