I changed the format, sort of...

--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
     <a href="Session_1/mystyle.html">MyStyle Page</a>
     <br><br><br>
     <h2> Session 2</h2>
-    <h3> Classwork for Session 2 <h3>
+    <h3> Classwork <h3>
     <a href="SO2/3.css.html">CSS Page</a>
     <br>
     <a href="SO2/2.style.html">Style</a>
     <br>
-    <h3> This is homework for the second session</h3>
+    <h3> Homework</h3>
     <a href="SO2/Hw1-hobbies.html"> My Hobbies </a>
     <br>
     <a href="SO2/Hw2-Favorite movies.html">Favorite Movies</a>
     <br><br><br>
     <h2>Session 3</h2>
-    <br>
-    <h3>Session 3; Classwork</h3>
+    <h3>Classwork</h3>
     <a href="SO3/1.getstarted.html"> Get Started</a>
     <br>
     <a href="SO3/2.alert.html">Alert</a>
