This is class three pt.2. I think

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <a href="Session_1/mystyle.html">MyStyle Page</a>
     <br><br><br>
     <h2> Session 2</h2>
-    <h3> Classwork <h3>
+    <h3> Classwork </h3>
     <a href="SO2/3.css.html">CSS Page</a>
     <br>
     <a href="SO2/2.style.html">Style</a>
@@ -31,7 +31,9 @@
     <br>
     <a href="SO3/2.alert.html">Alert</a>
     <br>
-    <h3>Session 3; Homework</h3>
+    <a href="SO3/3.table.html">Table</a>
+    <h3>Homework</h3>
+    <br>
 
 </body>
 </html>
