This is the update on index about class 3 pt.2 i think

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <a href="SO3/2.alert.html">Alert</a>
     <br>
     <a href="SO3/3.table.html">Table</a>
+    <br>
+    <a href="SO3/4.image.html">Image</a>
+    <br>
     <h3>Homework</h3>
     <br>
 
