--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <br>
     <h3>Homework</h3>
     <br>
+    <a href="SO3/hw/hw.1.colleges.html">Colleges</a>
+    <br>
+    <a href="SO3/hw/hw.2.career.html">Career</a>
 
 </body>
 </html>
