I had to change a link

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <a href="SO2/2.style.html">Style</a>
     <br>
     <h3> Homework</h3>
-    <a href="SO2/Hw1-hobbies.html"> My Hobbies </a>
+    <a href="SO2/hw/Hw1-hobbies.html"> My Hobbies </a>
     <br>
-    <a href="SO2/Hw2-Favorite movies.html">Favorite Movies</a>
+    <a href="SO2/hw/Hw2-Favorite movies.html">Favorite Movies</a>
     <br><br><br>
     <h2>Session 3</h2>
     <h3>Classwork</h3>
