--- a/SO3/hw/hw.2.career.html
+++ b/SO3/hw/hw.2.career.html
@@ -7,6 +7,25 @@
     <title>My Career</title>
 </head>
 <body>
-    
-</body>
+    <style>
+    h4{
+        color: red;
+        border: dashed;
+        border-color: 2px red;
+        background-color: aliceblue
+    }
+    </style>
+    <h1>Jobs</h1>
+
+    <h3>Every kid has trouble deciding what kind of job they want to do. Like all the other kids, so did I.</h3>
+    <h3>The first years of my life, up until kindergarden, I was not sure what I wanted to do, my friends and I were still trying to figure out what kinder meant. Especially why we were in a garden of them.</h3>
+    <h3>After that, my parents engrained into my head. </h3>
+    <h4><u>DOCTOR!!!<u></h4>
+    <h4><u>DOCTOR!!!<u></h4>
+    <h4><u>DOCTOR!!!<u></h4>
+    <h4><u>DOCTOR!!!<u></h4>
+    <h4><u>DOCTOR!!!<u></h4>
+    <h3>However, I decided that animating would be for me last year!</h3>
+    <h3>Finally, I accepted that my parents would only let me be a doctor, so that's what I plan on doing.</h3>
+    </body>
 </html>
