This is the same as the last commit

--- a/index.html
+++ b/index.html
@@ -39,6 +39,28 @@
     <a href="SO3/hw/hw.1.colleges.html">Colleges</a>
     <br>
     <a href="SO3/hw/hw.2.career.html">Career</a>
+    <br><br><br>
+    <h2>Session 4</h2>
+    <h3>Classwork</h3>
+    <a href="SO4/1.jumbotron.html">jumbotron</a>
+    <br>
+    <a href="SO4/2.buttons.html">jumbotron</a>
+    <br>
+    <a href="SO4/3.badges.html">jumbotron</a>
+    <br>
+    <a href="SO4/4.cards.html">jumbotron</a>
+    <br>
+    <a href="SO4/5.collapse.html">jumbotron</a>
+    <br>
+    <a href="SO4/6.navbar.html">jumbotron</a>
+    <br>
+    <a href="SO4/7.firstJs.html">jumbotron</a>
+    <br>
+    <a href="SO4/8.bulbOnOff.html">jumbotron</a>
+    <br>
+    <h3>Homework</h3>
+    
+
 
 </body>
 </html>
