--- a/SO4/hw/hw.1.school.html
+++ b/SO4/hw/hw.1.school.html
@@ -5,8 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>School</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.css">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </head>
-<body>
-    
+<body style="background-color:rgb(253, 239, 222)">
+    <div class="alert alert-danger alert-dismissable">
+            <button type="button" class="close" data-dismiss="alert">
+                &times;
+            </button>
+            <strong>READ AT YOUR OWN RISK<strong>
+        </div>
+    <h1>My School</h1>
+    <h2 style="font-family: cursive">I go to Robert C. Fisler!</h2>
+    <img src="34_Fisler_1.jpg">
+    <h2>My homeroom was L4 for 6th grade.</h2>
+    <h2>My homeroom TEACHER was Mr. Frieson, he is the history, geography and P.E. teacher</h2>
+    <img src="frieson.jpg">
+    <br><br>
+    <h2>I have 4 teachers; <br>
+        <button class="btn btn-primary" onclick="alert('The History, Geography and Physical Educaton teacher')">
+                Mr. Frieson <br>
+        </button>, <br>
+        <button class="btn btn-primary" onclick="alert('The Science and Writing teacher')">
+                Mr. Saline <br>
+        </button>,<br>
+        <button class="btn btn-primary" onclick="alert('The Reading and Language arts teacher')">
+                Ms. O'Meara <br>
+        </button>,<br> 
+        <button class="btn btn-primary" onclick="alert('The Math and Technology teacher')">
+                Ms. Olivolo <br>
+        </button></h2>
+    <h2>In the middle of the year, we had the math teacher, Ms. Olivolo, switched out for Ms. Merritt, so five?</h2>
+    <br>
+    <h3>It's in Fullerton, CA! Fun fact: It's on Starbuck street!</h3>
+    <img src="starbucks.png" width=200%>
+
+
+
 </body>
 </html>
