--- a/index.html
+++ b/index.html
@@ -59,6 +59,28 @@
     <a href="SO4/8.bulbOnOff.html">jumbotron</a>
     <br>
     <h3>Homework</h3>
+    <br>
+    <a href="SO4/Hw/hw.1.school.html">School</a>
+    <br>
+    <a href="SO4/Hw/hw.2.friends.html">Friends</a>
+    <br><br><br>
+    <h2>Session 5</h2>
+    <h3>Classwork</h3>
+    <a href="SO5/template.html">Template, you can't really see anything, but its a code</a>
+    <br>
+    <a href="SO5/1.review.html">Review</a>
+    <br>
+    <h4>Form</h4>
+    <a href="SO5/3.form.html">Form HTML</a>
+    <br>
+    <a href="SO5/myform.js">Form JavaScript</a>
+    <br>
+    <a href="SO5/myform.ts">Form TypeScript</a>
+    <br>
+    <a href="SO5/tsconfig.json">Something from TypeScript</a>
+    <br>
+    
+
     
 
 
