--- a/SO5/3.form.html
+++ b/SO5/3.form.html
@@ -29,7 +29,7 @@
         
         <span class="badge badge-primary" id="result"></span>
         <h2 id="dangertext" style="display:none">If you are not legal...
-            <button class="btn btn-danger" onclick="alert('GET OUT')">
+            <button class="btn btn-link" onclick="alert('GET OUT')">
                 click for more...
             </button>
         </h2>
