--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
     <br>
     <a href="SO5/tsconfig.json">Something from TypeScript</a>
     <br> 
-    
+    <h3>Homework</h3>
+    <br>
+    <h4>Form</h4>
+    <a href="SO5/Hw/hw.1.form.html">Form HTML</a>
+    <br>
+    <a href="SO5/Hw/hw.form.js">Form JavaScript</a>
+
 
     
 
