--- a/index.html
+++ b/index.html
@@ -76,8 +76,6 @@
     <a href="SO5/myform.js">Form JavaScript</a>
     <br>
     <a href="SO5/myform.ts">Form TypeScript</a>
-    <br>
-    <a href="SO5/tsconfig.json">Something from TypeScript</a>
     <br> 
     <h3>Homework</h3>
     <br>
@@ -85,6 +83,29 @@
     <a href="SO5/Hw/hw.1.form.html">Form HTML</a>
     <br>
     <a href="SO5/Hw/hw.form.js">Form JavaScript</a>
+    <br>
+    <h2>Session 6</h3>
+    <h3>Classwork</h3>
+    <h4>Canvas</h4>
+    <a href="SO6/1.canvas.html">Canvas HTML</a>
+    <br>
+    <a href="SO6/1.canvas.js">Canvas JavaScript</a>
+    <br>
+    <a href="SO6/1.canvas.ts">Canvas TypeScript</a>
+    <br><br>
+    <h4>Moving</h4>
+    <a href="SO6/2.moving.html">Moving HTML</a>
+    <br>
+    <a href="SO6/2.moving.js">Moving JavaScript</a>
+    <br>
+    <a href="SO6/2.moving.ts">Moving TypeScript</a>
+    <br>
+    <h4>Paddle</h4>
+    <a href="SO6/3.paddle.html">Paddle HTML</a>
+    <br>
+    <a href="SO6/3.paddle.js">Paddle JavaScript</a>
+    <br>
+    <a href="SO6/3.paddle.ts">Paddle TypeScript</a>
 
 
     
